css/include/components/dark-mode-adjustments.css
:root {
    /*  Adjust background color to prevent pixels from turning off (contrary to popular belief, pixels turning off saves trivial energy, like <1% in measurements, and causes nasty scrolling/update jank due to delay in pixels turning back on), and improve contrast with the white.
     */
    --GW-body-background-color: #161616;

    /*  Dial back from pure white to keep contrast from being *too* high & 'stark' (#fff bg / #000 text seems to work in light mode, but not in dark mode, perhaps because of differences in lighting environment?)
     */
    --GW-body-text-color: #f1f1f1;

    /*  Adjust this one color in the syntax highlighting color scheme to make it
        less saturated. (The automatic inversion algorithm doesn’t quite handle
        it in the way we want.)
     */
    --GW-syntax-highlight-color-control-flow: #cce1c8;

    /*  Variable for SVGs to use (like for the —𝔊— footers on the index page)
     */
    --GW-body-background-color-inverted: #ededed;

    /*  Reader mode.
     */
    --GW-reader-mode-masked-links-key-toggle-info-alert-panel-background-color: rgba(255, 255, 255, 0.85);

	/*	Mode selectors.
	 */
	--GW-mode-selector-mobile-background-color: rgba(18, 18, 18, 0.75);

	/*	Wikipedia images assume a white background; transparent images don’t
		look right if that assumption is violated.
	 */
	--GW-wikipedia-image-background-color: #fff;
}

/*  The ‘fill’ attribute of the SVGs is modified in dark mode.
    (We cannot use an invert filter because we don’t want to invert the whole
     element, only the background-image.)
 */
.collapse .disclosure-button::before {
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%235C5C5C"/></svg>');
}
.collapse .disclosure-button:hover::before {
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z" fill="%23000"/></svg>');
}
.collapse .disclosure-button:checked::before {
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%235C5C5C"/></svg>');
}
.collapse .disclosure-button:checked:hover::before {
    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" fill="%23000"/></svg>');
}

/* some SVGs used in annotations/essays (eg. /image/genetics/selection/2023-meyer-figure1-moralacceptabilityandpersonalwillingnesstouseembryoselectionorgeneticeditinginausapopulationsurvey.svg ) were authored as transparent SVGs, assuming a *white* background. In dark-mode, with a black background set, they are illegible.
So, in dark mode only, impose a white background on SVGs in <figure>s.
(This is scoped narrowly to only apply to SVGs which are displayed in <figure>, and not SVGs elsewhere—because SVGs elsewhere are probably part of the site design, and will have been designed to work with dark mode; forcing a white background on them may have unpredictable bad effects. If it turns out that this is still too broad, we may have to instead manually edit SVGs to force a white background, or selectively whitelist them for a white background.) */
figure img[src$=".svg"] { background-color: var(--GW-wikipedia-image-background-color); }

/*	Create a ‘footer’ at the bottom of pages which looks like ‘—————𝔊—————’,
	similar to the arabesque navbar.

	Footers help denote “this is the end”, and avoid the somewhat lame effect of
	just having the anonymous feedback link at the end of the page and ending
	there with nothing else.

	NOTE: this is for mobile only, and takes the place of desktop’s full
	arabesque navbar (see default.css).

	Implementation: Modifying the ‘fill’ does not work so well when we call an
	SVG as a ‘background-image’ (like for the  footers on the index page), so we
	do variable+invert tricks to get a white copy of the logo as a hack.
 */
@media only screen and (max-width: 649px) {
    a#footer-logo::after {
        filter: invert(1);
        background-color: var(--GW-body-background-color-inverted);
    }
}

/*  The ‘celestial symbol’ horizontal rules are SVGs and must be inverted.
 */
hr::after,
.horizontal-rule-nth-0 hr::after {
    opacity: 1;
    filter: invert(1) drop-shadow(0 0 0 currentColor);
}
.horizontal-rule-nth-1 hr::after {
    opacity: 0.75;
    filter: invert(1);
}
.horizontal-rule-nth-2 hr::after {
    opacity: 0.85;
    filter: invert(1);
}

/*  Drop cap opacity adjustment.
 */
.drop-cap-goudy::first-letter,
.drop-cap-goudy > p::first-letter {
    opacity: 0.95;
}

/*  Admonition icons.
 */
div.admonition::before {
    filter: invert(1);
}

/*	Dotted link underlines in admonitions.
 */
div.admonition.warning,
div.admonition.error {
    --GW-dotted-underline-background-image: var(--GW-dotted-underline-hover-dark-background-image);
}
/* ... */

